--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-tobase64",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "image to base64",
   "main": "index.js",
   "dependencies": {
     "through2": "^0.6.5"
@@ -11,5 +11,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wanghx",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/whxaxes/gulp-tobase64.git"
+  },
+  "bugs": {
+    "url": "https://github.com/whxaxes/gulp-tobase64/issues"
+  },
+  "homepage": "https://github.com/whxaxes/gulp-tobase64"
 }
