--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "through2": "^0.6.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "istanbul": "^0.4.3",
+    "mocha": "^2.4.5",
+    "vinyl-fs": "^2.4.3"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test",
+    "cover": "make cover"
   },
   "author": "wanghx",
   "license": "MIT",
