--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "through2": "^2.0.1"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "vinyl-fs": "^2.4.3"
