--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-tobase64",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "image to base64",
   "main": "index.js",
   "dependencies": {
@@ -20,6 +20,9 @@
   "license": "MIT",
   "directories": {
     "test": "test"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
